--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,15 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+**Teaching Assistant**  
+  
+- Applied Bayesian Modeling and Prediction (STAT 768). SP 2023, Kansas State University.  
+- Crop Science (AGRON 220), FA 2021, Kansas State University.   
+- Crop physiology, SP 2018, FA 2020, SP 2020, Universidad de Buenos Aires.  
+- Applied Biochemistry, SP2017, FA2018, Universidad de Buenos Aires.  
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+
+**Self-led courses**  
+
+- An introduction to applied statistics in R - 2021, 2022.  
+
